[package]
name = "arrayvec"
version = "0.5.0"
authors = ["bluss"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "A vector with fixed capacity, backed by an array (it can be stored on the stack too). Implements fixed capacity ArrayVec and ArrayString."
documentation = "https://docs.rs/arrayvec/"
repository = "https://github.com/bluss/arrayvec"

keywords = ["stack", "vector", "array", "data-structure", "no_std"]
categories = ["data-structures", "no-std"]

[build-dependencies]

[dependencies]
serde       = { git = "https://github.com/mesalock-linux/serde-sgx"}
sgx_tstd    = {rev = "v1.0.9", get = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }

#[dependencies.serde]
#version = "1.0"
#optional = true
#default-features = false

[dev-dependencies.serde_test]
version = "1.0"

[dev-dependencies]
matches = { version = "0.1" }
bencher = "0.1.4"

[[bench]]
name = "extend"
harness = false

[[bench]]
name = "arraystring"
harness = false

[features]
default = ["mesalock_sgx", "std"]
mesalock_sgx = ["std","sgx_tstd"]
std = ["mesalock_sgx"]

array-sizes-33-128 = []
array-sizes-129-255 = []

[package.metadata.docs.rs]
features = ["serde"]

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"
